# teams-transcript-tool

./: .gitignore  DESIGN.md  pyproject.toml
src/teams_transcript/: __init__.py  formatter.py  github.py  main.py  models.py  parser.py
tests/: __init__.py  test_formatter.py  test_parser.py
transcripts/: README.md  sample-meeting.vtt  sample-q4-planning.md
